website/versioned_docs/version-2.5.x/reference/subsystems/python-setup.mdx
---
title: python-setup
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for Pants&#x27;s Python support.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[python-setup]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `interpreter_constraints`

<Option
  cli_repr={`--python-setup-interpreter-constraints="[<requirement>, <requirement>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_CONSTRAINTS'
  default_repr={`["CPython>=3.6"]`}
>
The Python interpreters your codebase is compatible with.

Specify with requirement syntax, e.g. &#x27;CPython&gt;=2.7,&lt;3&#x27; (A CPython interpreter with version &gt;=2.7 AND version &lt;3) or &#x27;PyPy&#x27; (A pypy interpreter of any version). Multiple constraint strings will be ORed together.

These constraints are used as the default value for the `interpreter_constraints` field of Python targets.

</Option>

### `requirement_constraints`

<Option
  cli_repr={`--python-setup-requirement-constraints=<file_option>`}
  env_repr='PANTS_PYTHON_SETUP_REQUIREMENT_CONSTRAINTS'
  default_repr={`None`}
>
When resolving third-party requirements, use this constraints file to determine which versions to use.

See https://pip.pypa.io/en/stable/user_guide/#constraints-files for more information on the format of constraint files and how constraints are applied in Pex and pip.

Mutually exclusive with `--requirement-constraints-target`.

</Option>

### `requirement_constraints_target`

<Option
  cli_repr={`--python-setup-requirement-constraints-target=<target_option>`}
  env_repr='PANTS_PYTHON_SETUP_REQUIREMENT_CONSTRAINTS_TARGET'
  default_repr={`None`}
>
When resolving third-party requirements, use this _python_constraints target to determine which versions to use.

This is primarily intended for macros (for now). Normally, use `--requirement-constraints` instead with a constraints file.

See https://pip.pypa.io/en/stable/user_guide/#constraints-files for more information on the format of constraints and how constraints are applied in Pex and pip.

</Option>

### `resolve_all_constraints`

<Option
  cli_repr={`--python-setup-resolve-all-constraints=<parse>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVE_ALL_CONSTRAINTS'
  one_of='never, nondeployables, always, True, False'
  default_repr={`True`}
>
If enabled, when resolving requirements, Pants will first resolve your entire constraints file as a single global resolve. Then, if the code uses a subset of your constraints file, Pants will extract the relevant requirements from that global resolve so that only what&#x27;s actually needed gets used. If disabled, Pants will not use a global resolve and will resolve each subset of your requirements independently.

Usually this option should be enabled because it can result in far fewer resolves.

Requires [python-setup].requirement_constraints to be set.

</Option>

### `interpreter_search_paths`

<Option
  cli_repr={`--python-setup-interpreter-search-paths="[<binary-paths>, <binary-paths>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_SEARCH_PATHS'
  default_repr={`[\n  "<PYENV>",\n  "<PATH>"\n]`}
>
A list of paths to search for Python interpreters that match your project&#x27;s interpreter constraints. You can specify absolute paths to interpreter binaries and/or to directories containing interpreter binaries. The order of entries does not matter. The following special strings are supported:

- &quot;&lt;PATH&gt;&quot;, the contents of the PATH env var
- &quot;&lt;PYENV&gt;&quot;, all Python versions under $(pyenv root)/versions
- &quot;&lt;PYENV_LOCAL&gt;&quot;, the Pyenv interpreter with the version in BUILD_ROOT/.python-version
- &quot;&lt;PEXRC&gt;&quot;, paths in the PEX_PYTHON_PATH variable in /etc/pexrc or ~/.pexrc
  </Option>

### `resolver_manylinux`

<Option
  cli_repr={`--python-setup-resolver-manylinux=<str>`}
  env_repr="PANTS_PYTHON_SETUP_RESOLVER_MANYLINUX"
  default_repr={`manylinux2014`}
>
  Whether to allow resolution of manylinux wheels when resolving requirements
  for foreign linux platforms. The value should be a manylinux platform upper
  bound, e.g.: &#x27;manylinux2010&#x27;, or else the string &#x27;no&#x27; to
  disallow.
</Option>

### `resolver_jobs`

<Option
  cli_repr={`--python-setup-resolver-jobs=<int>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_JOBS'
  default_repr={`32`}
>
The maximum number of concurrent jobs to build wheels with.

Because Pants can run multiple subprocesses in parallel, the maximum total parallelism will be `--process-execution-{local,remote}-parallelism x --python-setup-resolver-jobs`.

Setting this option higher may result in better parallelism, but, if set too high, may result in starvation and Out of Memory errors.

Defaults to half the cores on your machine.

</Option>

## Deprecated options

None

</span>

